--- a/style.css
+++ b/style.css
@@ -167,3 +167,18 @@ button:active {
     opacity: 1;
     transform: translateY(0);
 }
+/* Параллакс-эффект */
+.parallax {
+    background-image: url('https://images.unsplash.com/photo-1728237646970-e73938b2c1d1?q=80&w=1941&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    height: 100vh; /* Высота блока - 100% от высоты экрана */
+    background-attachment: fixed; /* Фиксируем фон при прокрутке */
+    background-position: center; /* Центрируем изображение */
+    background-repeat: no-repeat; /* Не повторяем изображение */
+    background-size: cover; /* Изображение покрывает весь блок */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 3em;
+  }
+  
